[chromium] fix showFPScounter and showPaintRects not toggleable after page change https://bugs.webkit.org/show_bug.cgi?id=103937

Patch by Eberhard Graether <egraether@google.com> on 2012-12-04
Reviewed by Pavel Feldman.

This change avoids updating the WebSettings and uses fields for showFPSCounter and
showPaintRects in WebViewImpl instead, which hold the values between InspectorPageAgent::restore()
and WebViewImpl::setIsAcceleratedCompositingActive().

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::WebViewImpl):
(WebKit::WebViewImpl::setShowFPSCounter):
(WebKit::WebViewImpl::setShowPaintRects):
(WebKit::WebViewImpl::setIsAcceleratedCompositingActive):
* src/WebViewImpl.h:

Canonical link: https://commits.webkit.org/122117@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136529 268f45cc-cd09-0410-ab3c-d52691b4dbfc